<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:visibility="gone"
    android:orientation="vertical"
    android:padding="@dimen/x24dp">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="@dimen/image_size_extra_large"
        android:layout_height="@dimen/image_size_extra_large"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/il_disconnected" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/padding_parent"
        android:layout_marginTop="@dimen/x30dp"
        android:layout_marginEnd="@dimen/padding_parent"
        android:gravity="center_horizontal"
        android:text="@string/oops_no_internet_connection"
        android:textSize="@dimen/text_extra_large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_small"
        android:layout_margin="@dimen/padding_parent"
        android:gravity="center_horizontal"
        android:text="@string/it_seems_is_something_wrong_with_your_internet_connection_make_sure_your_wi_fi_or_cellular_data_is_turned_on_and_then_try_again"
        android:textColor="@color/textSecondary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:text="@string/try_again" />
</LinearLayout>